--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
+  transparent_image: ^2.0.0
+  flutter_fadein: ^2.0.0
+  image_picker: ^0.8.2
 
 dev_dependencies:
   flutter_test:
