--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ISSD.internship.smart_class_api_consumer">
-   <application
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <application
         android:label="smart_class_api_consumer"
         android:icon="@mipmap/ic_launcher">
         <activity
