--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   transparent_image: ^2.0.0
   flutter_fadein: ^2.0.0
   image_picker: ^0.8.2
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
