Added way to store fetched data
With SharedPreferences plugin we are now able to keep fetched data and display it in a bar graph on the Homepage in the recent report container.
Also made some slight adjustments to classes and metric_reports.dart. However, I'm not really liking how the data is being displayed on the Home screen so thinking of how to better represent it that's more appealing to the eye

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^0.8.2
   http: ^0.13.3
   syncfusion_flutter_charts: ^19.2.49
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
